@@ -4,28 +4,30 @@ import com.corpomotriz.repuestos.dto.crear.ProveedorCrearDTO;
 import com.corpomotriz.repuestos.dto.ProveedorDTO;
 import com.corpomotriz.repuestos.model.Proveedor;
 import com.corpomotriz.repuestos.repository.ProveedorRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ProveedorService {
 
-    @Autowired
-    private ProveedorRepository proveedorRepository;
+    private final ProveedorRepository proveedorRepository;
+
+    public ProveedorService(ProveedorRepository proveedorRepository) {
+        this.proveedorRepository = proveedorRepository;
+    }
 
     public List<ProveedorDTO> getAllProveedores() {
         return proveedorRepository.findAll().stream()
-                .map(this::convertirAProveedorDTO)
-                .collect(Collectors.toList());
+                .map(this::toDTO)
+                .toList();
     }
 
     public Optional<ProveedorDTO> getProveedorById(Integer id) {
         return proveedorRepository.findById(id)
-                .map(this::convertirAProveedorDTO);
+                .map(this::toDTO);
     }
 
     public ProveedorDTO createProveedor(ProveedorCrearDTO dto) {
@@ -36,14 +38,13 @@ public class ProveedorService {
                 .localizacion(dto.getLocalizacion())
                 .especializacion(dto.getEspecializacion())
                 .plazoEntrega(dto.getPlazoEntrega())
-                .fechaCreacion(java.time.LocalDateTime.now())
+                .fechaCreacion(LocalDateTime.now())
                 .build();
 
-        Proveedor proveedorGuardado = proveedorRepository.save(proveedor);
-        return convertirAProveedorDTO(proveedorGuardado);
+        return toDTO(proveedorRepository.save(proveedor));
     }
 
-    private ProveedorDTO convertirAProveedorDTO(Proveedor proveedor) {
+    private ProveedorDTO toDTO(Proveedor proveedor) {
         return ProveedorDTO.builder()
                 .id(proveedor.getId())
                 .nombre(proveedor.getNombre())
